# zero-firmware

./: .clang-format  .gitignore  Makefile  README.md  python-requirements.txt  west.yml
.github/workflows/: main.yml
.west/: config
apps/adc_perf/: adc_perf_client.py  adc_perf_client_udp.py  adc_perf_tool.py  prj.conf
apps/blinky/: CMakeLists.txt  prj.conf
apps/breaker_shell/: CMakeLists.txt  prj.conf
apps/coap_test/: prj.conf
apps/hello_world/: CMakeLists.txt
apps/tli4971/: CMakeLists.txt  frdm_k64f.overlay  prj.conf
apps/zero/: CMakeLists.txt  prj.conf  sample.yaml
apps/zperf/: CMakeLists.txt  prj.conf
cmake/: extensions.cmake  zephyr.cmake
docs/: api-spec.md  coap_api.md  coap_api_spec.md  default_trip_curve.md  developer_guide.md  state-machine.md
docs/archived/: coap_api.md
manifest/: west.yml
modules/bcb/zephyr/drivers/: CMakeLists.txt  Kconfig
modules/bcb/zephyr/drivers/adc/: CMakeLists.txt  Kconfig  Kconfig.mcux_edma  adc_mcux_edma.c  adc_mcux_edma.h
modules/bcb/zephyr/drivers/adc_trigger/: CMakeLists.txt  Kconfig  Kconfig.mcux_ftm  Kconfig.mcux_lptmr  adc_trigger_mcux_ftm.c
modules/bcb/zephyr/drivers/counter/: CMakeLists.txt  Kconfig.mcux_pit
modules/bcb/zephyr/drivers/dma/: CMakeLists.txt  Kconfig  Kconfig.mcux_edma  dma_mcux_partial.c
modules/bcb/zephyr/drivers/eeprom/: CMakeLists.txt  Kconfig  Kconfig.m95080  eeprom_m95080.c
modules/bcb/zephyr/drivers/input_capture/: CMakeLists.txt  Kconfig  input_capture_mcux_ftm.c
renode/: vnet.sh  zero.repl  zero_mul.repl
scripts/: conda-requirements.txt  python-requirements.txt
(+277 files in other folders)
